--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "cd Client && yarn test --watchAll && cd .."
+      "pre-commit": "echo ”[Husky] pre-commit”"
     }
   },
   "author": "Priyang",
