--- a/Client/package.json
+++ b/Client/package.json
@@ -26,12 +26,14 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "e2e": "cypress open"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest"
+      "react-app/jest",
+      "plugin:cypress/recommended"
     ]
   },
   "browserslist": {
@@ -52,6 +54,8 @@
     "@types/react-test-renderer": "^17.0.1",
     "@types/styled-components": "^5.1.15",
     "axios-mock-adapter": "^1.20.0",
+    "cypress": "^9.2.1",
+    "eslint-plugin-cypress": "^2.12.1",
     "react-test-renderer": "^17.0.2"
   }
 }
