--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node Server/server.js",
     "server": "nodemon Server/server.js",
     "client": "npm start --prefix Client",
-    "clientInstall": "yarn install --prefix Client",
+    "install": "npm install --prefix Client && npm install",
     "clientBuild": "cd Client && yarn build Client",
     "dev": "concurrently \"yarn run server\" \"yarn run client\"",
     "test": "cd Client && yarn test --watchAll && cd ..",
