--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -21,6 +21,6 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
-      - run: npm i clientInstall
-      - run: npm run clientBuild --if-present
+      - run: npm i
+      - run: npm run Build --if-present
       - run: npm test
