--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "install": "cd Client && npm install",
     "clientBuild": "cd Client && yarn build Client",
     "dev": "concurrently \"yarn run server\" \"yarn run client\"",
-    "test": "cd Client && yarn test --watchAll && cd ..",
+    "test": "cd Client && CI=true yarn run test && cd ..",
     "data:import": "node Server/seeder",
     "data:destroy": "node Server/seeder -d",
     "prepare": "husky install",
