--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "echo ”[Husky] pre-commit”"
+      "pre-commit": "echo ”[Husky] pre-commit”",
+      "pre-push": "echo ”[Husky] pre-push”"
     }
   },
   "author": "Priyang",
