Revert "Pre Push Hook"
This reverts commit 81938521a2aa69066a71539e860a46221aad7a33.

--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "echo ”[Husky] pre-commit”",
-      "pre-push": "echo ”[Husky] pre-push”"
+      "pre-commit": "echo ”[Husky] pre-commit”"
     }
   },
   "author": "Priyang",
