--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node Server/server.js",
     "server": "nodemon Server/server.js",
     "client": "npm start --prefix Client",
+    "e2e": "npm run e2e --prefix Client",
     "install": "cd Client && npm install",
     "clientBuild": "cd Client && yarn build Client",
     "dev": "concurrently \"yarn run server\" \"yarn run client\"",
