--- a/Client/package.json
+++ b/Client/package.json
@@ -15,10 +15,10 @@
     "install": "^0.13.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-error-boundary": "^3.1.0",
     "react-paypal-button-v2": "^2.6.3",
     "react-query": "^3.34.19",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "^5.0.0",
     "styled-components": "^5.3.1",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
@@ -57,6 +57,7 @@
     "axios-mock-adapter": "^1.20.0",
     "cypress": "^9.2.1",
     "eslint-plugin-cypress": "^2.12.1",
+    "react-scripts": "^5.0.0",
     "react-test-renderer": "^17.0.2"
   }
 }
