--- a/Client/package.json
+++ b/Client/package.json
@@ -22,7 +22,13 @@
     "react-router-dom": "^5.3.0",
     "styled-components": "^5.3.1",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "workbox-core": "^6.5.1",
+    "workbox-expiration": "^6.5.1",
+    "workbox-precaching": "^6.5.1",
+    "workbox-routing": "^6.5.1",
+    "workbox-strategies": "^6.5.1",
+    "workbox-sw": "^6.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
