--- a/Client/package.json
+++ b/Client/package.json
@@ -35,14 +35,12 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "coverage": "react-scripts test --watchAll --coverage",
-    "eject": "react-scripts eject",
-    "e2e": "cypress open"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest",
-      "plugin:cypress/recommended"
+      "react-app/jest"
     ]
   },
   "browserslist": {
@@ -64,8 +62,6 @@
     "@types/react-test-renderer": "^17.0.1",
     "@types/styled-components": "^5.1.15",
     "axios-mock-adapter": "^1.20.0",
-    "cypress": "^9.2.1",
-    "eslint-plugin-cypress": "^2.12.1",
     "react-scripts": "^5.0.0",
     "react-test-renderer": "^17.0.2"
   }
