--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
     "start": "node Server/server.js",
     "server": "nodemon Server/server.js",
     "client": "npm start --prefix Client",
-    "e2e": "npm run e2e --prefix Client",
     "install": "cd Client && npm install",
     "clientBuild": "cd Client && yarn build Client",
     "dev": "concurrently \"yarn run server\" \"yarn run client\"",
-    "test": "cd Client && CI=true yarn run test && cd ..",
+    "test": "cd Client && CI=true yarn run test --coverage && cd ..",
     "data:import": "node Server/seeder",
     "data:destroy": "node Server/seeder -d",
     "prepare": "husky install",
+    "e2e": "cypress open",
     "deploy": "yarn run clientInstall && yarn run clientBuild"
   },
   "husky": {
@@ -39,6 +39,7 @@
     "nodemailer": "^6.6.2"
   },
   "devDependencies": {
+    "cypress": "^9.6.0",
     "husky": "^7.0.0",
     "nodemon": "^2.0.15"
   }
