--- a/Client/package.json
+++ b/Client/package.json
@@ -35,7 +35,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "coverage": "react-scripts test --watchAll --coverage",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "FormatePages": "bash FileFormate.sh"
   },
   "eslintConfig": {
     "extends": [
