--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "nodemailer": "^6.6.2"
   },
   "devDependencies": {
+    "@faker-js/faker": "^6.3.1",
     "cypress": "^9.6.0",
     "husky": "^7.0.0",
     "nodemon": "^2.0.15"
