--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "author": "Priyang",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "bcryptjs": "^2.4.3",
     "concurrently": "^6.2.0",
     "dotenv": "^9.0.2",
