--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
+    "express-rate-limit": "^6.4.0",
     "googleapis": "^78.0.0",
     "imagekit": "^3.2.5",
     "jsonwebtoken": "^8.5.1",
