--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "license": "ISC",
   "dependencies": {
     "@sendgrid/mail": "^7.7.0",
+    "agenda": "^4.3.0",
     "bcryptjs": "^2.4.3",
     "concurrently": "^6.2.0",
     "dotenv": "^9.0.2",
