--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "mongoose": "^5.12.8",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "node-cache": "^5.1.2",
     "nodemailer": "^6.6.2"
   },
   "devDependencies": {
