--- a/Client/package.json
+++ b/Client/package.json
@@ -28,7 +28,8 @@
     "workbox-precaching": "^6.5.1",
     "workbox-routing": "^6.5.1",
     "workbox-strategies": "^6.5.1",
-    "workbox-sw": "^6.5.1"
+    "workbox-sw": "^6.5.1",
+    "workbox-window": "^6.5.3"
   },
   "scripts": {
     "start": "react-scripts start",
