--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.8",
     "morgan": "^1.10.0",
-    "multer": "^1.4.2",
+    "multer": "^1.4.5-lts.1",
     "node-cache": "^5.1.2",
     "nodemailer": "^6.6.2"
   },
