--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node Server/server.js",
     "server": "nodemon Server/server.js",
     "client": "npm start --prefix Client",
-    "build": "npm run build --prefix Client",
+    "build": "npm install --prefix Client && npm run build --prefix Client",
     "dev": "concurrently \"yarn run server\" \"yarn run client\"",
     "test": "cd Client && CI=true yarn run test --coverage && cd ..",
     "data:import": "node Server/seeder",
