--- a/Client/package.json
+++ b/Client/package.json
@@ -34,7 +34,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "CI=false && react-scripts build",
     "test": "react-scripts test",
     "coverage": "react-scripts test --watchAll --coverage",
     "eject": "react-scripts eject",
