--- a/Client/package.json
+++ b/Client/package.json
@@ -16,7 +16,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-error-boundary": "^3.1.0",
-    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.3.0",
     "react-paypal-button-v2": "^2.6.3",
     "react-query": "^3.34.19",
     "react-router-dom": "^5.3.0",
