--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "Server/server.js",
   "scripts": {
     "start": "node Server/server.js",
-    "server": "nodemon Server/server.js",
+    "server": "nodemon --transpile-only Server/server.ts ",
+    "TypeScriptBuild": "tsc -b -v -i -w",
     "client": "npm start --prefix Client",
     "build": "npm install --prefix Client && npm run build --prefix Client",
     "build:client": "npm run build --prefix Client",
@@ -34,7 +35,7 @@
     "express-rate-limit": "^6.4.0",
     "imagekit": "^3.2.5",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.8",
+    "mongoose": "^6.4.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "node-cache": "^5.1.2",
@@ -42,9 +43,12 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^6.3.1",
+    "@types/node": "^18.0.3",
     "cypress": "^9.6.0",
     "dotenv": "^16.0.1",
     "husky": "^7.0.0",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "ts-node": "^10.8.2",
+    "typescript": "^4.7.4"
   }
 }
