--- a/Client/package.json
+++ b/Client/package.json
@@ -30,7 +30,8 @@
     "workbox-routing": "^6.5.1",
     "workbox-strategies": "^6.5.1",
     "workbox-sw": "^6.5.1",
-    "workbox-window": "^6.5.3"
+    "workbox-window": "^6.5.3",
+    "@ecommerce/validation": "*"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -66,6 +67,7 @@
     "@types/react-test-renderer": "^17.0.1",
     "@types/styled-components": "^5.1.15",
     "axios-mock-adapter": "^1.20.0",
+    "eslint-config-custom": "*",
     "react-scripts": "^5.0.0",
     "react-test-renderer": "^17.0.2"
   }
