--- a/package.json
+++ b/package.json
@@ -2,21 +2,17 @@
   "name": "Ecommerce",
   "version": "1.0.0",
   "description": "Ecommerce shoping FullStack",
-  "main": "Server/server.js",
   "scripts": {
-    "start": "node Server/server.js",
-    "server": "nodemon --transpile-only Server/server.ts ",
-    "TypeScriptBuild": "tsc -b -v -i -w",
-    "client": "npm start --prefix Client",
-    "build": "npm install --prefix Client && npm run build --prefix Client",
-    "build:client": "npm run build --prefix Client",
+    "start": "npm run start --prefix Server",
+    "client": "npm run start --prefix Client",
+    "server": "npm run server --prefix Server",
     "dev": "concurrently \"yarn run server\" \"yarn run client\"",
-    "test": "cd Client && CI=true yarn run test --passWithNoTests && cd ..",
+    "build": "npm run build --prefix Client && npm run build --prefix Server",
+    "test": "cd Client && CI=true yarn run test:watch --passWithNoTests && cd ..",
     "data:import": "node Server/seeder",
     "data:destroy": "node Server/seeder -d",
     "prepare": "husky install",
-    "e2e": "cypress open",
-    "deploy": "yarn run clientInstall && yarn run clientBuild"
+    "e2e": "cypress open"
   },
   "husky": {
     "hooks": {
@@ -30,25 +26,10 @@
   ],
   "author": "Priyang",
   "license": "ISC",
-  "dependencies": {
-    "@sendgrid/mail": "^7.7.0",
-    "agenda": "^4.3.0",
-    "bcryptjs": "^2.4.3",
-    "concurrently": "^6.2.0",
-    "express": "^4.17.1",
-    "express-async-handler": "^1.1.4",
-    "express-rate-limit": "^6.4.0",
-    "imagekit": "^3.2.5",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.4.3",
-    "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
-    "node-cache": "^5.1.2",
-    "nodemailer": "^6.6.2"
-  },
   "devDependencies": {
     "@types/node": "^18.0.3",
     "cypress": "^9.6.0",
+    "concurrently": "^6.2.0",
     "dotenv": "^16.0.1",
     "husky": "^7.0.0",
     "nodemon": "^2.0.15",
