--- a/Client/package.json
+++ b/Client/package.json
@@ -4,13 +4,6 @@
   "private": true,
   "proxy": "http://localhost:5001",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
     "axios": "^0.23.0",
     "install": "^0.13.0",
     "react": "^17.0.2",
@@ -36,8 +29,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "CI=false && react-scripts build",
-    "test": "react-scripts test  --coverage",
-    "test:one": "react-scripts test",
+    "test": "react-scripts test --watchAll --coverage",
+    "test:watch": "react-scripts test --coverage",
     "eject": "react-scripts eject",
     "FormatePages": "bash FileFormate.sh",
     "Component": "bash Component.sh"
@@ -61,6 +54,13 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^12.0.0",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "@testing-library/react-hooks": "^7.0.2",
     "@types/react-helmet": "^6.1.5",
     "@types/react-router-dom": "^5.3.1",
