--- a/Server/package.json
+++ b/Server/package.json
@@ -22,7 +22,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "node-cache": "^5.1.2",
-    "nodemailer": "^6.6.2"
+    "nodemailer": "^6.6.2",
+    "@ecommerce/validation": "*"
   },
   "devDependencies": {
     "@types/node": "^18.0.3",
