Change useFormHook and Replaced Utils Validation with Zod

--- a/Client/package.json
+++ b/Client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "http://localhost:5001",
   "dependencies": {
+    "@ecommerce/validation": "*",
     "axios": "^0.23.0",
     "install": "^0.13.0",
     "react": "^17.0.2",
@@ -23,14 +24,14 @@
     "workbox-routing": "^6.5.1",
     "workbox-strategies": "^6.5.1",
     "workbox-sw": "^6.5.1",
-    "workbox-window": "^6.5.3",
-    "@ecommerce/validation": "*"
+    "workbox-window": "^6.5.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "CI=false && react-scripts build",
     "test": "react-scripts test --watchAll --coverage",
     "test:watch": "react-scripts test --coverage",
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
     "eject": "react-scripts eject",
     "FormatePages": "bash FileFormate.sh",
     "Component": "bash Component.sh"
@@ -56,12 +57,12 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
+    "@testing-library/react-hooks": "^7.0.2",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "@testing-library/react-hooks": "^7.0.2",
     "@types/react-helmet": "^6.1.5",
     "@types/react-router-dom": "^5.3.1",
     "@types/react-test-renderer": "^17.0.1",
