--- a/Server/package.json
+++ b/Server/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "ts-node server.ts",
     "server": "nodemon --transpile-only server.ts ",
+    "run-Build": "nodemon  build/server.js ",
     "build": "tsc -b -v -i -w",
     "data:import": "node seeder",
     "data:destroy": "node seeder -d"
