--- a/Client/package.json
+++ b/Client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ecommerce",
+  "name": "ecommerce_client",
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:5001",
@@ -29,7 +29,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "CI=false && react-scripts build",
-    "test": "react-scripts test --watchAll --coverage",
+    "test": "react-scripts test --watchAll=false  --coverage --forceExit",
     "test:watch": "react-scripts test --coverage",
     "analyze": "source-map-explorer 'build/static/js/*.js'",
     "eject": "react-scripts eject",
