--- a/Server/package.json
+++ b/Server/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "ecommerce-server",
+  "name": "ecommerce_server",
   "version": "1.0.0",
   "main": "server.ts",
   "scripts": {
     "start": "ts-node server.ts",
     "server": "nodemon --transpile-only server.ts ",
     "run-Build": "nodemon  build/server.js ",
-    "build": "tsc -b -v -i -w",
+    "build": "tsc -p ./",
     "data:import": "node seeder",
     "data:destroy": "node seeder -d"
   },
