--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -2,9 +2,9 @@ name: Deploy
 
 on:
   push:
-    branches: [Actions]
+    branches: [actions]
   pull_request:
-    branches: [Actions]
+    branches: [actions]
 
 jobs:
   build:
