--- a/Client/package.json
+++ b/Client/package.json
@@ -15,6 +15,7 @@
     "react-query": "^3.34.19",
     "react-router-dom": "^5.3.0",
     "styled-components": "^5.3.1",
+    "styled-normalize": "^8.0.7",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
     "workbox-core": "^6.5.1",
