--- a/Client/package.json
+++ b/Client/package.json
@@ -37,7 +37,8 @@
     "eject": "react-scripts eject",
     "lint": "eslint 'src/**/*.{ts,tsx}'",
     "FormatePages": "bash FileFormate.sh",
-    "Component": "bash Component.sh"
+    "Component": "bash Component.sh",
+    "prepare": "husky install & npx husky add .husky/commit-msg 'npx --no -- commitlint --edit '"
   },
   "eslintConfig": {
     "extends": [
@@ -58,6 +59,8 @@
     ]
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.0.3",
+    "@commitlint/config-conventional": "^17.0.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/react-hooks": "^7.0.2",
@@ -72,6 +75,7 @@
     "@types/styled-components": "^5.1.15",
     "axios-mock-adapter": "^1.20.0",
     "eslint-config-custom": "*",
+    "husky": "^8.0.1",
     "react-scripts": "^5.0.0",
     "react-test-renderer": "^17.0.2"
   }
