--- a/admin/package.json
+++ b/admin/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "proxy": "http://localhost:5001",
   "dependencies": {
+    "@hookform/resolvers": "^2.9.7",
+    "@ecommerce/validation": "*",
     "axios": "^0.27.2",
     "prop-types": "^15.8.1",
-    "ra-data-json-server": "^4.2.6",
     "react": "^18.2.0",
     "react-admin": "^4.2.6",
     "react-dom": "^18.2.0",
