--- a/admin/package.json
+++ b/admin/package.json
@@ -7,9 +7,10 @@
     "@ecommerce/validation": "*",
     "@hookform/resolvers": "^2.9.7",
     "axios": "^0.27.2",
+    "progress-bar-webpack-plugin": "^2.1.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-admin": "^4.3.4",
+    "react-admin": "^4.4.1",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1"
   },
@@ -40,6 +41,7 @@
     "@types/node": "^16.11.47",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "webpack-bundle-analyzer": "^4.6.1"
   }
 }
