--- a/apps/Server/package.json
+++ b/apps/Server/package.json
@@ -11,9 +11,11 @@
     "data:destroy": "ts-node seeder -d"
   },
   "dependencies": {
+    "@ecommerce/validation": "*",
     "@sendgrid/mail": "^7.7.0",
     "agenda": "^4.3.0",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-async-handler": "^1.1.4",
     "express-rate-limit": "^6.4.0",
@@ -23,8 +25,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "node-cache": "^5.1.2",
-    "nodemailer": "^6.6.2",
-    "@ecommerce/validation": "*"
+    "nodemailer": "^6.6.2"
   },
   "devDependencies": {
     "@types/node": "^18.0.3",
