--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -2,9 +2,9 @@ name: Deploy
 
 on:
   push:
-    branches: [test]
+    branches: [master]
   pull_request:
-    branches: [test]
+    branches: [master]
 
 jobs:
   build:
@@ -20,7 +20,7 @@ jobs:
       - name: npm install, build, and test
         run: |
           npm install
-          npm run build --if-present
+          npm run build:Client --if-present
           npm test
       - name: Install Vercel CLI
         run: npm install --global vercel@latest
