--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "dev:admin": "concurrently \"yarn run start\" \"yarn run admin\"",
     "build:client": "npm run build --prefix apps/Client",
     "build:server": "npm run build --prefix apps/Server",
-    "build": "yarn turbo run build",
+    "build": "turbo run build",
+    "build:admin": "npm run build --prefix apps/admin",
+    "build:Client": "turbo run build --filter=./apps/Server --filter=./apps/Client",
     "build:remove": "cd Client && rm -rf build && cd .. && cd Server && rm -rf build && cd ..",
-    "test": "yarn turbo run test",
+    "test": "turbo run test",
     "data:import": "ts-node Server/seeder",
     "data:destroy": "ts-node Server/seeder -d",
     "e2e": "cypress open"
@@ -31,13 +33,13 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^18.0.3",
-    "cypress": "^9.6.0",
     "concurrently": "^6.2.0",
+    "cypress": "^9.6.0",
     "dotenv": "^16.0.1",
     "husky": "^7.0.0",
     "nodemon": "^2.0.15",
     "ts-node": "^10.8.2",
-    "turbo": "^1.3.1",
+    "turbo": "^1.5.6",
     "typescript": "^4.7.4"
   }
 }
