--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -12,6 +12,7 @@
     "react": "^18.2.0",
     "react-admin": "^4.4.1",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.1.2",
     "react-scripts": "5.0.1"
   },
   "scripts": {
@@ -40,6 +41,7 @@
     "@types/node": "^16.11.47",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@types/react-helmet": "^6.1.5",
     "typescript": "^4.7.4",
     "webpack-bundle-analyzer": "^4.6.1"
   }
