--- a/apps/Client/package.json
+++ b/apps/Client/package.json
@@ -37,8 +37,7 @@
     "eject": "react-scripts eject",
     "lint": "eslint 'src/**/*.{ts,tsx}'",
     "FormatePages": "bash FileFormate.sh",
-    "Component": "bash Component.sh",
-    "prepare": "husky install & npx husky add .husky/commit-msg 'npx --no -- commitlint --edit '"
+    "Component": "bash Component.sh"
   },
   "eslintConfig": {
     "extends": [
@@ -75,7 +74,6 @@
     "@types/styled-components": "^5.1.15",
     "axios-mock-adapter": "^1.20.0",
     "eslint-config-custom": "*",
-    "husky": "^8.0.1",
     "react-scripts": "^5.0.0",
     "react-test-renderer": "^17.0.2"
   }
