--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "server": "npm run server --prefix apps/Server",
     "dev": "concurrently \"yarn run server\" \"yarn run client\"",
     "dev:admin": "concurrently \"yarn run start\" \"yarn run admin\"",
+    "build": "turbo run build",
     "build:client": "npm run build --prefix apps/Client",
     "build:server": "npm run build --prefix apps/Server",
-    "build": "turbo run build",
     "build:admin": "npm run build --prefix apps/admin",
-    "build:Client": "turbo run build --filter=./apps/Server --filter=./apps/Client",
+    "build:dev": "turbo run build --filter=./apps/Server --filter=./apps/Client",
     "build:remove": "cd Client && rm -rf build && cd .. && cd Server && rm -rf build && cd ..",
     "test": "turbo run test",
     "data:import": "ts-node apps/Server/seeder",
