--- a/apps/Client/package.json
+++ b/apps/Client/package.json
@@ -6,14 +6,15 @@
   "dependencies": {
     "@ecommerce/validation": "*",
     "axios": "^0.23.0",
+    "history": "^5.3.0",
     "install": "^0.13.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-error-boundary": "^3.1.0",
     "react-helmet-async": "^1.3.0",
     "react-paypal-button-v2": "^2.6.3",
-    "react-query": "^3.34.19",
-    "react-router-dom": "^5.3.4",
+    "react-query": "^3.39.2",
+    "react-router-dom": "^6.4.2",
     "styled-components": "^5.3.1",
     "styled-normalize": "^8.0.7",
     "typescript": "^4.1.2",
@@ -57,24 +58,29 @@
       "last 1 safari version"
     ]
   },
+  "overrides": {
+    "react-helmet-async": {
+      "@types/react": "^17.0.0",
+      "@types/react-dom": "^17.0.0"
+    }
+  },
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
     "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/react-hooks": "^7.0.2",
-    "@testing-library/user-event": "^12.1.10",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/react-hooks": "^8.0.1",
+    "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@types/react-helmet": "^6.1.5",
-    "@types/react-router-dom": "^5.3.1",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
+    "@types/react-router-dom": "^5.3.3",
     "@types/react-test-renderer": "^17.0.1",
     "@types/styled-components": "^5.1.15",
     "axios-mock-adapter": "^1.20.0",
     "eslint-config-custom": "*",
     "react-scripts": "^5.0.0",
-    "react-test-renderer": "^17.0.2"
+    "react-test-renderer": "^18.2.0"
   }
 }
