--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -7,6 +7,7 @@
     "@ecommerce/validation": "*",
     "@hookform/resolvers": "^2.9.7",
     "axios": "^0.27.2",
+    "history": "^5.3.0",
     "progress-bar-webpack-plugin": "^2.1.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
