--- a/apps/Client/package.json
+++ b/apps/Client/package.json
@@ -16,6 +16,7 @@
     "react-paypal-button-v2": "^2.6.3",
     "react-query": "^3.39.2",
     "react-router-dom": "^6.4.2",
+    "react-toastify": "^9.0.8",
     "styled-components": "^5.3.1",
     "styled-normalize": "^8.0.7",
     "typescript": "^4.1.2",
