--- a/apps/Client/package.json
+++ b/apps/Client/package.json
@@ -5,6 +5,7 @@
   "proxy": "http://localhost:5001",
   "dependencies": {
     "@ecommerce/validation": "*",
+    "@paypal/react-paypal-js": "^7.8.1",
     "axios": "^0.23.0",
     "history": "^5.3.0",
     "install": "^0.13.0",
@@ -13,7 +14,6 @@
     "react-error-boundary": "^3.1.0",
     "react-helmet-async": "^1.3.0",
     "react-icons": "^4.6.0",
-    "react-paypal-button-v2": "^2.6.3",
     "react-query": "^3.39.2",
     "react-router-dom": "^6.4.2",
     "react-toastify": "^9.0.8",
