--- a/apps/Server/package.json
+++ b/apps/Server/package.json
@@ -16,6 +16,7 @@
     "agenda": "^4.3.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "date-fns": "^2.29.3",
     "express": "^4.18.1",
     "express-async-handler": "^1.1.4",
     "express-rate-limit": "^6.4.0",
