--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -7,6 +7,7 @@
     "@ecommerce/validation": "*",
     "@hookform/resolvers": "^2.9.7",
     "axios": "^0.27.2",
+    "date-fns": "^2.29.3",
     "history": "^5.3.0",
     "progress-bar-webpack-plugin": "^2.1.0",
     "prop-types": "^15.8.1",
@@ -14,7 +15,8 @@
     "react-admin": "^4.4.1",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.1.2",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "recharts": "^2.1.15"
   },
   "scripts": {
     "start": "react-scripts start",
