--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["Authtypes", "Datagrid", "ecommerce", "postalcode"]
+  "cSpell.words": ["Authtypes", "Datagrid", "ecommerce", "postalcode", "shopit"]
 }
