--- a/apps/Client/package.json
+++ b/apps/Client/package.json
@@ -14,6 +14,7 @@
     "react-error-boundary": "^3.1.0",
     "react-helmet-async": "^1.3.0",
     "react-icons": "^4.6.0",
+    "react-modal": "^3.16.1",
     "react-query": "^3.39.2",
     "react-router-dom": "^6.4.2",
     "react-toastify": "^9.0.8",
@@ -77,11 +78,13 @@
     "@types/node": "^12.0.0",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "@types/react-modal": "^3.13.1",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-test-renderer": "^17.0.1",
     "@types/styled-components": "^5.1.15",
     "axios-mock-adapter": "^1.20.0",
     "eslint-config-custom": "*",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "react-scripts": "^5.0.0",
     "react-test-renderer": "^18.2.0"
   }
