--- a/apps/Client/package.json
+++ b/apps/Client/package.json
@@ -7,6 +7,7 @@
     "@ecommerce/validation": "*",
     "@paypal/react-paypal-js": "^7.8.1",
     "axios": "^0.23.0",
+    "date-fns": "^2.29.3",
     "history": "^5.3.0",
     "install": "^0.13.0",
     "react": "^18.2.0",
