Backend: better caching and get requests

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["Authtypes", "Datagrid", "ecommerce", "postalcode", "shopit"]
+  "cSpell.words": [
+    "Authtypes",
+    "Datagrid",
+    "ecommerce",
+    "postalcode",
+    "SENDGRID",
+    "shopit"
+  ]
 }
