--- a/apps/Client/.vscode/settings.json
+++ b/apps/Client/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
   "typescript.tsdk": "node_modules/typescript/lib",
-  "cSpell.words": ["Nunito", "postalcode", "testid"]
+  "cSpell.words": ["Nunito", "postalcode", "Priyang", "testid"]
 }
