Wishlist in Cart

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,12 @@
 {
   "cSpell.words": [
     "Authtypes",
+    "Cartwishlist",
     "Datagrid",
     "ecommerce",
     "postalcode",
     "SENDGRID",
-    "shopit"
+    "shopit",
+    "testid"
   ]
 }
