--- a/apps/Client/package.json
+++ b/apps/Client/package.json
@@ -10,6 +10,7 @@
     "date-fns": "^2.29.3",
     "history": "^5.3.0",
     "install": "^0.13.0",
+    "lottie-react": "^2.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^3.1.0",
@@ -86,6 +87,7 @@
     "axios-mock-adapter": "^1.20.0",
     "eslint-config-custom": "*",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "jest-canvas-mock": "^2.4.0",
     "react-scripts": "^5.0.0",
     "react-test-renderer": "^18.2.0"
   }
