--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -19,8 +19,8 @@ jobs:
         uses: actions/checkout@v3
       - name: npm install, build, and test
         run: |
-          npm install
-          npm run build:Client --if-present
+          npm i
+          npm run build:dev --if-present
           npm test
       - name: Install Vercel CLI
         run: npm install --global vercel@latest
