--- a/apps/Client/package.json
+++ b/apps/Client/package.json
@@ -21,6 +21,7 @@
     "react-query": "^3.39.2",
     "react-router-dom": "^6.4.2",
     "react-toastify": "^9.0.8",
+    "react-wavify": "^1.6.3",
     "styled-components": "^5.3.1",
     "styled-normalize": "^8.0.7",
     "typescript": "^4.1.2",
