--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "nodemon": "^2.0.15",
     "ts-node": "^10.8.2",
     "turbo": "^1.5.6",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "vite-plugin-pwa": "^1.0.0"
   }
 }
