--- a/apps/Client/package.json
+++ b/apps/Client/package.json
@@ -36,12 +36,13 @@
   },
   "scripts": {
     "start": "vite",
-    "build": "CI=false && react-scripts build",
+    "build": "vite build",
+    "preview": "vite preview",
     "test": "react-scripts test --watchAll=false  --coverage --forceExit",
     "test:watch": "react-scripts test --watch",
     "test:coverage": "react-scripts test --coverage",
-    "analyze": "source-map-explorer 'build/static/js/*.js'",
     "eject": "react-scripts eject",
+    "analyze": "source-map-explorer 'build/*.js'",
     "lint": "eslint 'src/**/*.{ts,tsx}'",
     "FormatePages": "bash FileFormate.sh",
     "Component": "bash Component.sh"
@@ -89,9 +90,13 @@
     "axios-mock-adapter": "^1.20.0",
     "eslint-config-custom": "*",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "jest": "^29.7.0",
     "jest-canvas-mock": "^2.4.0",
     "react-scripts": "^5.0.0",
     "react-test-renderer": "^18.2.0",
-    "vite": "^6.3.5"
+    "remove": "^0.1.5",
+    "vite": "^6.3.5",
+    "vitest": "^3.2.1",
+    "vitest-canvas-mock": "^0.3.3"
   }
 }
