--- a/apps/Client/package.json
+++ b/apps/Client/package.json
@@ -38,10 +38,9 @@
     "start": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "react-scripts test --watchAll=false  --coverage --forceExit",
-    "test:watch": "react-scripts test --watch",
-    "test:coverage": "react-scripts test --coverage",
-    "eject": "react-scripts eject",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
     "analyze": "source-map-explorer 'build/*.js'",
     "lint": "eslint 'src/**/*.{ts,tsx}'",
     "FormatePages": "bash FileFormate.sh",
@@ -87,6 +86,7 @@
     "@types/react-test-renderer": "^17.0.1",
     "@types/styled-components": "^5.1.15",
     "@vitejs/plugin-react": "^4.5.1",
+    "@vitest/coverage-v8": "^3.2.1",
     "axios-mock-adapter": "^1.20.0",
     "eslint-config-custom": "*",
     "eslint-plugin-react-hooks": "^4.6.0",
