--- a/apps/Client/package.json
+++ b/apps/Client/package.json
@@ -6,7 +6,7 @@
     "@ecommerce/validation": "*",
     "@paypal/react-paypal-js": "^7.8.1",
     "@priyang/react-component-lib": "^1.0.2",
-    "axios": "^0.23.0",
+    "axios": "^1.9.0",
     "date-fns": "^2.29.3",
     "history": "^5.3.0",
     "install": "^0.13.0",
@@ -39,9 +39,10 @@
     "build": "vite build",
     "preview": "vite preview",
     "test": "vitest run",
+    "test:ui": "vitest --ui",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
-    "analyze": "source-map-explorer 'build/*.js'",
+    "analyze": "source-map-explorer 'build/**/*.js'",
     "lint": "eslint 'src/**/*.{ts,tsx}'",
     "FormatePages": "bash FileFormate.sh",
     "Component": "bash Component.sh"
@@ -86,7 +87,8 @@
     "@types/styled-components": "^5.1.15",
     "@vitejs/plugin-react": "^4.5.1",
     "@vitest/coverage-v8": "^3.2.1",
-    "axios-mock-adapter": "^1.20.0",
+    "@vitest/ui": "^3.2.2",
+    "axios-mock-adapter": "^2.1.0",
     "eslint-config-custom": "*",
     "eslint-plugin-react-hooks": "^4.6.0",
     "react-test-renderer": "^18.2.0",
