--- a/apps/Client/tsconfig.json
+++ b/apps/Client/tsconfig.json
@@ -14,8 +14,12 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "paths": {
+      "axios": ["./node_modules/axios/index.d.ts"]
+    }
   },
+
   "include": ["src"],
   "exclude": ["node_modules", "build"]
 }
