--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -45,7 +45,9 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@types/react-helmet": "^6.1.5",
+    "@vitejs/plugin-react": "^4.5.1",
     "typescript": "^4.7.4",
+    "vite": "^6.3.5",
     "webpack-bundle-analyzer": "^4.6.1"
   }
 }
