--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -15,14 +15,13 @@
     "react-admin": "^4.4.1",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.1.2",
-    "react-scripts": "5.0.1",
     "recharts": "^2.1.15"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "analyze": "source-map-explorer 'build/static/js/*.js'",
-    "eject": "react-scripts eject"
+    "start": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "analyze": "source-map-explorer 'build/**/*.js'"
   },
   "browserslist": {
     "production": [
