--- a/apps/Server/package.json
+++ b/apps/Server/package.json
@@ -29,10 +29,11 @@
     "nodemailer": "^7.0.3"
   },
   "devDependencies": {
-    "@types/node": "^18.0.3",
+    "@types/express": "^4.17.21",
+    "@types/node": "^22.15.30",
     "dotenv": "^16.5.0",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
-    "typescript": "^4.7.4"
+    "typescript": "^5.8.3"
   }
 }
