--- a/apps/Server/package.json
+++ b/apps/Server/package.json
@@ -20,11 +20,11 @@
     "express": "^4.18.1",
     "express-async-handler": "^1.2.0",
     "express-rate-limit": "^7.5.0",
-    "imagekit": "^3.2.5",
+    "imagekit": "^6.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^6.4.3",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
+    "multer": "^2.0.1",
     "node-cache": "^5.1.2",
     "nodemailer": "^7.0.3"
   },
