--- a/apps/Client/package.json
+++ b/apps/Client/package.json
@@ -23,6 +23,7 @@
     "styled-components": "^6.1.18",
     "styled-normalize": "^8.1.1",
     "typescript": "^5.8.3",
+    "vite-plugin-pwa": "^1.0.0",
     "web-vitals": "^5.0.2",
     "workbox-core": "^7.3.0",
     "workbox-expiration": "^7.3.0",
