--- a/apps/Client/package.json
+++ b/apps/Client/package.json
@@ -32,7 +32,8 @@
     "workbox-routing": "^7.3.0",
     "workbox-strategies": "^7.3.0",
     "workbox-sw": "^7.3.0",
-    "workbox-window": "^7.3.0"
+    "workbox-window": "^7.3.0",
+    "zod": "^3.22.4"
   },
   "scripts": {
     "start": "vite",
