--- a/apps/Server/package.json
+++ b/apps/Server/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "ts-node server.ts",
     "server": "nodemon --transpile-only server.ts ",
-    "run-Build": "nodemon  build/server.js ",
+    "run-Build": "node  build/server.js ",
     "build": "tsc -p ./",
     "data:import": "ts-node seeder",
     "data:destroy": "ts-node seeder -d"
@@ -25,7 +25,8 @@
     "morgan": "^1.10.0",
     "multer": "^2.0.1",
     "node-cache": "^5.1.2",
-    "nodemailer": "^7.0.3"
+    "nodemailer": "^7.0.3",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
