--- a/apps/Server/package.json
+++ b/apps/Server/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "ts-node server.ts",
     "server": "nodemon --transpile-only server.ts ",
-    "run-Build": "nodemon  build/server.js ",
+    "run-Build": "node  build/server.js ",
     "build": "tsc -p ./",
     "data:import": "ts-node seeder",
     "data:destroy": "ts-node seeder -d"
