--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -14,7 +14,8 @@
     "react-admin": "^5.8.3",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.5",
-    "recharts": "^2.15.3"
+    "recharts": "^2.15.3",
+    "zod": "^3.22.4"
   },
   "scripts": {
     "start": "vite",
