--- a/apps/Client/package.json
+++ b/apps/Client/package.json
@@ -12,6 +12,7 @@
     "history": "^5.3.0",
     "install": "^0.13.0",
     "lottie-react": "^2.4.1",
+    "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^3.1.4",
@@ -22,8 +23,6 @@
     "react-router-dom": "^6.30.1",
     "react-toastify": "^11.0.5",
     "react-wavify": "^1.11.1",
-    "styled-components": "^6.1.18",
-    "styled-normalize": "^8.1.1",
     "typescript": "^5.8.3",
     "vite-plugin-pwa": "^1.0.0",
     "web-vitals": "^5.0.2",
